# flessner

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  app.config.ts  build.rs  fly.toml  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
bitwarden/: Caddyfile  Dockerfile  fly.toml
owui/: fly.toml
proxy/: Caddyfile  Dockerfile  fly.toml
public/.well-known/: atproto-did
src/: app.tsx  global.css  lib.rs  main.rs  pages.rs  styles.css
src/lib/: Item.tsx
src/routes/: [...404].tsx  index.tsx
src/ui/: Header.tsx  index.ts
static/: styles.css
static/css/: custom.css
templates/: index.html
templates/layouts/: default.html
track/: .dockerignore  .gitignore  Dockerfile  fly.toml  package-lock.json  package.json  tsconfig.json
track/src/: main.ts
tracking/: Caddyfile  fly.toml
umami/: fly.db.toml  fly.toml
umami-db/: fly.toml
web/: .dockerignore  .gitignore  Dockerfile  fly.toml  package-lock.json  package.json
web/app/: root.tsx  routes.ts
web/app/_design/: tokens.ts
web/messages/: en.json
web/src/: app.css
web/src/routes/: +layout.svelte  +page.svelte
website/: Dockerfile  app.config.ts  fly.toml  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts  windi.config.js
website/app/: app.css  root.tsx
website/app/hooks/: useTheme.tsx
website/app/lib/: preferences.ts
website/app/routes/: design.tsx  (+1 more)
website/messages/: de.json
website/project.inlang/: project_id
website/src/: app.css  app.d.ts  app.html  entry-server.tsx  global.css  site.js
(+21 files in other folders)
