[package]
name = "flessner_web"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "flessner_web"
path = "src/lib.rs"

[[bin]]
name = "flessner_web"
path = "src/main.rs"

[dependencies]
axum = "0.8"
askama = "0.15"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
include_dir = "0.7"
mime_guess = "2.0"
